Fix dark mode

--- a/spa_src/src/pages/Home.css
+++ b/spa_src/src/pages/Home.css
@@ -8,8 +8,3 @@
     max-height: calc(100vh - 25vh);
   }
 }
-
-.dark-style {
-  background-color: #343a40;
-  color: #ffffff;
-}
